src/objects/Process__c.object
<CustomObject>
    <customHelpPage>ProcessHelp</customHelpPage>
    <fields>
        <fullName>ApexClassId__c</fullName>
        <label>Apex Class Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfigObject__c</fullName>
        <inlineHelpText>Optionally, what is the API name of a Custom Object used to configure instances of this process?</inlineHelpText>
        <label>Config Object</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomSetting__c</fullName>
        <inlineHelpText>Optionally, what is the API name of a Custom Setting used to hold any global options for this process?</inlineHelpText>
        <label>Custom Setting</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>What does this process do?</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DocsPageUrl__c</fullName>
        <inlineHelpText>Where is the supporting documentation provided by the author of this process?</inlineHelpText>
        <label>Docs Page URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FullyQualifiedClassName__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>What is the underlying namespace prefix and Apex class name used by this process?</inlineHelpText>
        <label>Fully Qualified Class Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <inlineHelpText>What is the name of the icon that represents this process? (From http://www.famfamfam.com/lab/icons/silk/previews/index_abc.png)</inlineHelpText>
        <label>Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <inlineHelpText>What is the tag name? Processes grouped with the same tag name will appear together.</inlineHelpText>
        <label>Tag</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Process</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Tag__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>EventDrivenArchitecture</fullName>
        <columns>NAME</columns>
        <columns>Tag__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tag__c</field>
            <operation>equals</operation>
            <value>Event Driven Architecture</value>
        </filters>
        <label>Event Driven Architecture</label>
    </listViews>
    <nameField>
        <label>Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>